@@ -3,7 +3,7 @@ Section: video
 Priority: extra
 Maintainer: Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>
 Uploaders: Thomas Schmidt <tschmidt@debian.org>, Tobias Grimm <etobi@debian.org>, Thomas Günther <tom@toms-cafe.de>
-Build-Depends: debhelper (>= 9), bash-completion, libjpeg-dev, libcap-dev, dh-systemd,
+Build-Depends: debhelper (>= 9), bash-completion, dh-systemd, libjpeg-dev, libcap-dev,
   libncursesw5-dev, libfreetype6-dev, libfontconfig-dev, gettext,
   python, linux-libc-dev (>= 3.0), libfribidi-dev
 Standards-Version: 3.9.6
