@@ -2,6 +2,3 @@
 #
 # See also /usr/share/doc/vdr/README.Debian.gz
 #
-
-# Change to 1 to enable vdr's init-script
-ENABLED=0
